
8.  Fix two buffer over read issues in 16 and 32 bit modes. Affects JIT only.

9.  Optimizing fast_forward_start_bits in JIT.

10. Adding experimental support for callouts in JIT, and fixing some
    issues revealed during this work. Namely:

    (a) Unoptimized capturing brackets incorrectly reset on backtrack.

    (b) Minimum length was not checked before the matching is started.

    WARNING: Callouts are not release ready! <- this line needs to be removed when it is.

11. The value of capture_last that is passed to callouts was incorrect in some
    cases when there was a capture on one path that was subsequently abandoned 
    after a backtrack. Also, the capture_last value is now reset after a 
    recursion, since all captures are also reset in this case.
    
12. The interpreter no longer returns the "too many substrings" error in the 
    case when an overflowing capture is in a branch that is subsequently 
    abandoned after a backtrack.
    
13. In the pathological case when an offset vector of size 2 is used, pcretest 
    now prints out the matched string after a yield of 0 or 1.


Version 8.32 30-November-2012
-----------------------------

1.  Improved JIT compiler optimizations for first character search and single
    character iterators.

2.  Supporting IBM XL C compilers for PPC architectures in the JIT compiler.
    Patch by Daniel Richard G.

3.  Single character iterator optimizations in the JIT compiler.

4.  Improved JIT compiler optimizations for character ranges.

5.  Rename the "leave" variable names to "quit" to improve WinCE compatibility.
    Reported by Giuseppe D'Angelo.

6.  The PCRE_STARTLINE bit, indicating that a match can occur only at the start
    of a line, was being set incorrectly in cases where .* appeared inside
    atomic brackets at the start of a pattern, or where there was a subsequent
    *PRUNE or *SKIP.

7.  Improved instruction cache flush for POWER/PowerPC.
    Patch by Daniel Richard G.
